Text align resolved

--- a/_src/assets/components/_about-us.scss
+++ b/_src/assets/components/_about-us.scss
@@ -35,20 +35,6 @@
   justify-content: center;
   align-items: center;
   margin-bottom: 30px;
-
-  @media all and (min-width: 768px) {
-    &:nth-child(even) {
-      flex-direction: row;
-      justify-content: left;
-      margin-left: 44px;
-    }
-
-    &:nth-child(odd) {
-      flex-direction: row-reverse;
-      justify-content: right;
-      margin-right: 44px;
-    }
-  }
 }
 .image {
   width: 180px;
@@ -93,196 +79,48 @@
     height: 18px;
     text-align: center;
   }
+  
   .rrss a::after {
     content: "·";
     font-size: x-large;
     color: #099d8d;
   }
-  @media all and (min-width: 768px) {
-    .odd {
-      margin-right: 45px;
-      padding: 0;
-      justify-content: left;
-      text-align: left;
-    }
-    .even {
+  
+  
+}
+
+@media all and (min-width: 768px) {
+  
+  article:nth-child(even) {
+    flex-direction: row;
+    justify-content: left;
+    margin-left: 44px;
+    .adalabers {
       margin-left: 45px;
       padding: 0;
       align-items: flex-start;
-      text-align: right;
-    }
-    .name.even {
-      font-size: 20px;
-      text-align: right;
-    }
-    .name.odd {
-      font-size: 20px;
       text-align: left;
-    }
-
-    .text.even {
-      text-align: left;
-      width: 400px;
-      font-size: 16px;
-    }
-
-    .text.odd {
-      width: 400px;
-      font-size: 16px;
-      text-align: right;
     }
   }
-}
 
-// @media all and (min-width: 768px) {
-// &:nth-child(even) {
-//   flex-direction: column;
-//   align-items: flex-start;
-//   margin-left: 31px;
-//   background-color: green;
-// }
+  article:nth-child(odd) {
+    flex-direction: row-reverse;
+    justify-content: right;
+    margin-right: 44px;
+  }
+  .adalabers{
+    margin-right: 45px;
+    padding: 0;
+    justify-content: left;
+    text-align: right;
+  }
 
-// &:nth-child(odd) {
-//   margin-right: 31px;
-//   flex-direction: column;
-//   align-items: flex-end;
-//   background-color: purple;
-// }
-
-//     &-name {
-//       font-size: 20px;
-//       text-align: ;
-//     }
-//     .text:nth-child(even) {
-//       text-align: left;
-//       width: 400px;
-//       font-size: 16px;
-//     }
-//     .text:nth-child(odd) {
-//       text-align: right;
-//       width: 400px;
-//       font-size: 16px;
-//     }
-//   }
-// }
-/* .rrss a::after {
-  content: "/* aaaa */
-// @media all and (min-width: 768px) {
-//   .about-us {
-//     margin: 45px auto;
-//     font-size: 24px;
-//   }
-//   .about-us-link-interno {
-//     color: transparent;
-//     position: relative;
-//     bottom: 5em;
-//   }
-// .article.even {
-//   flex-direction: row;
-//   justify-content: left;
-//   margin-left: 44px;
-// }
-
-// .article.odd {
-//   flex-direction: row-reverse;
-//   justify-content: right;
-//   margin-right: 44px;
-// }
-
-// .adalabers.even {
-//   flex-direction: column;
-//   align-items: flex-start;
-//   margin-left: 31px;
-// }
-
-// .adalabers.odd {
-//   margin-right: 31px;
-//   flex-direction: column;
-//   align-items: flex-end;
-// }
-
-// .adalaber-name {
-//   font-size: 20px;
-// }
-
-// .text-adalabers.even {
-//   text-align: left;
-//   width: 400px;
-//   font-size: 16px;
-//   // }
-
-//   .text-adalabers.odd {
-//     width: 400px;
-//     font-size: 16px;
-//     text-align: right;
-//   }
-// }
-
-// @media all and (min-width: 1200px) {
-//   .about-us {
-//     margin: 45px auto;
-//   }
-//   .about-us-link-interno {
-//     color: transparent;
-//     position: relative;
-//     bottom: 5em;
-//   }
-//   .article.even {
-//     flex-direction: row;
-//     margin-bottom: 60px;
-//     justify-content: left;
-//     align-items: flex-start;
-//     margin-left: 138px;
-//   }
-
-//   .article.odd {
-//     flex-direction: row-reverse;
-//     margin-bottom: 60px;
-//     justify-content: right;
-//     margin-right: 138px;
-//   }
-
-//   .adalabers.even {
-//     margin-left: 45px;
-//     padding: 0;
-//     text-align: left;
-//     align-items: flex-start;
-//   }
-
-//   .adalabers.odd {
-//     margin-right: 45px;
-//     padding: 0;
-//     align-items: flex-end;
-//     text-align: right;
-//   }
-
-//   .image {
-//     width: 278px;
-//     height: 278px;
-//   }
-
-//   .text-adalabers.even {
-//     width: 439px;
-//     text-align: left;
-//   }
-
-//   .text-adalabers.odd {
-//     width: 439px;
-//     text-align: right;
-//   }
-// }
-
-// LA OPCION QUE NO selector-append($selectors: // &:nth-child(even) {
-//   align-items: flex-start;
-//   // text-align: right;
-//   // .text {
-//   //   text-align: right;
-//   // }
-// }
-
-// &:nth-child(odd) {
-//   align-items: flex-end;
-// text-align: left;
-// .text {
-//   text-align: left;
-// }…)
+  .name {
+    font-size: 20px;
+    text-align: right;
+  }
+   .text {
+    width: 400px;
+    font-size: 16px;
+  }
+  }
